# read-later-digest

./: .gitignore  README.md  pyproject.toml  samconfig.toml.tmpl  template.yaml
.github/workflows/: ci.yml
scripts/: README.md  create-notion-db.py  deploy.sh  gen-env.py  sync-requirements.py
src/: requirements.txt
src/read_later_digest/: config.py  exceptions.py  handler.py  logging_setup.py  orchestrator.py  run.py
src/read_later_digest/adapters/: article_fetcher.py  notion_repository.py
src/read_later_digest/adapters/llm/: base.py  claude.py  schema.py
src/read_later_digest/adapters/mailer/: base.py  ses.py
src/read_later_digest/adapters/notifier/: base.py  slack.py
src/read_later_digest/domain/: digest_builder.py  models.py
tests/: conftest.py
tests/fixtures/notion/: unread_page1.json  unread_page2.json
tests/unit/: test_config.py  test_create_notion_db.py  test_gen_env.py  test_handler.py  test_orchestrator.py  test_requirements_sync.py  test_template_param_consistency.py
tests/unit/adapters/: test_article_fetcher.py  test_notion_repository.py
tests/unit/adapters/llm/: test_claude.py  test_schema.py
tests/unit/adapters/mailer/: test_ses.py
tests/unit/adapters/notifier/: test_slack.py
tests/unit/domain/: test_digest_builder.py
