[project]
name = "read-later-digest"
version = "0.1.0"
description = "Notion DB unread articles digest tool"
requires-python = ">=3.13"
dependencies = [
    # 3.x "Data Source" API: `databases.query` was retired in favor of
    # `data_sources.query`. The adapter resolves the data_source_id once via
    # `databases.retrieve` and caches it.
    "notion-client>=3.0,<4.0",
    "aws-lambda-powertools>=3.0",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "anthropic>=0.40",
    "pydantic>=2.9",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/read_later_digest"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
